# C:\Users\Admin\Desktop\My_ATS_Project\pyproject.toml

[project]
name = "my-ats-system" # Нова назва пакета
version = "1.0.0"
authors = [
  { name="valik1286", email="infofaste.org.ua@gmail.com" }, # Заміни на свою пошту
]
description = "Аналітична Територіальна Система (АТС) - ваш персональний стратегічний помічник."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Шукати пакети в поточній директорії (тобто папку 'ats')